[gd_scene load_steps=7 format=2]

[ext_resource path="res://img/enemigos/jefe_final.png" type="Texture" id=1]
[ext_resource path="res://componentes/enemigos/jefe_final/jefe_final.gd" type="Script" id=2]
[ext_resource path="res://fx/enemigos/muerte.ogg" type="AudioStream" id=3]
[ext_resource path="res://fx/enemigos/lastimado.wav" type="AudioStream" id=4]

[sub_resource type="CapsuleShape2D" id=2]
radius = 16.0
height = 0.0

[sub_resource type="CircleShape2D" id=1]
radius = 807.01

[node name="jefe_final" type="KinematicBody2D" groups=["jefe_final"]]
collision_layer = 2
collision_mask = 4
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="."]
rotation = 3.14159
scale = Vector2( 2, 2 )
texture = ExtResource( 1 )

[node name="boca1" type="Position2D" parent="."]
position = Vector2( -16, 20 )

[node name="boca2" type="Position2D" parent="."]
position = Vector2( 16, 20 )

[node name="enemigo_collider" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 5
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="enemigo_collider"]
shape = SubResource( 2 )

[node name="area_provocadora" type="Area2D" parent="."]
visible = false
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="area_provocadora"]
shape = SubResource( 1 )

[node name="balas" type="Node" parent="."]

[node name="Timer" type="Timer" parent="."]

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
position = Vector2( 9.53674e-07, -9.53674e-07 )
scale = Vector2( 1.9, 2.1 )
__meta__ = {
"_edit_lock_": true
}

[node name="fx_muerte" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )

[node name="fx_lastimado" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
volume_db = 0.5
